fix: corregir tests unitarios, verificación de email y Stripe Connect
- Fix 132 tests unitarios de servicios (0 fallos): CitaService, ClienteService,
  NegocioService, RateLimitService, RecordatorioService, ReporteService,
  ServicioService, StripeService, SuscripcionService, UsuarioService
- fix(email): desacoplar envío de email de la TX de registro en
  EmailVerificationService para que un fallo de Resend no haga rollback
  del usuario ni del token de verificación
- fix(stripe-connect): añadir @JsonIgnoreProperties(ignoreUnknown=true) en
  CreateConnectedAccountRequest para aceptar campos extra del frontend
- feat(auth): añadir ActualizarPerfilRequest y mejoras en AuthController,
  AuthService y JwtAuthenticationFilter
- feat(stripe): ampliar StripeService con checkout sessions, webhooks y
  gestión de suscripciones
- feat(security): mejorar WebSecurityConfig con CORS dinámico por entorno
- feat(prod): actualizar application-prod.yml con configuración completa
- refactor(tests): añadir application-test.properties y corregir mocks de
  Mockito (nullable, MockedStatic, ByteBuddy Java 23)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>